--- a/scripts/vs-modeling.rmd
+++ b/scripts/vs-modeling.rmd
@@ -53,32 +53,32 @@ Data<-Data[complete.cases(Data),]
 ```
 
 ```{r,echo=FALSE, warning=FALSE}
-# success_rate <- ggplot(Data, aes(x = SR)) +
-#   geom_histogram(binwidth = .5, stat = "count") + theme_minimal() +
-#   ylim(0, 60) +
-#   ylab("Count") + xlab("Success rate") + scale_x_discrete(
-#     limits = c("1", "2", "3", "4", "5", "6", "7"),
-#     labels = c("< 10%",
-#                "10-20%",
-#                "20-30%",
-#                "30-50%",
-#                "50-75%",
-#                "75-90%",
-#                "> 90%")
-#   ) + ggtitle("Proposals success rate") + theme(plot.title = element_text(hjust = 0.5))
-# print(success_rate)
-
-
 success_rate <- ggplot(Data, aes(x = SR)) +
   geom_histogram(binwidth = .5, stat = "count") + theme_minimal() +
-  ylim(0, 160) +
+  ylim(0, 60) +
   ylab("Count") + xlab("Success rate") + scale_x_discrete(
-    limits = c("1", "2", "3"),
-    labels = c("10-30%",
+    limits = c("1", "2", "3", "4", "5", "6", "7"),
+    labels = c("< 10%",
+               "10-20%",
+               "20-30%",
                "30-50%",
-               "50-100%")
+               "50-75%",
+               "75-90%",
+               "> 90%")
   ) + ggtitle("Proposals success rate") + theme(plot.title = element_text(hjust = 0.5))
 print(success_rate)
+
+
+# success_rate <- ggplot(Data, aes(x = SR)) +
+#   geom_histogram(binwidth = .5, stat = "count") + theme_minimal() +
+#   ylim(0, 160) +
+#   ylab("Count") + xlab("Success rate") + scale_x_discrete(
+#     limits = c("1", "2", "3"),
+#     labels = c("10-30%",
+#                "30-50%",
+#                "50-100%")
+#   ) + ggtitle("Proposals success rate") + theme(plot.title = element_text(hjust = 0.5))
+# print(success_rate)
 ```
 
 
