--- a/scripts/vs-corelationplot.rmd
+++ b/scripts/vs-corelationplot.rmd
@@ -152,6 +152,28 @@ for (i in 1:nrow(Corelation_DF)) {
     Corelation_DF$SR[i] = 7
   }
   
+  
+  
+  # if (Corelation_DF$SR[i] == "< 10%") {
+  #   Corelation_DF$SR[i] = 1
+  # } else if (Corelation_DF$SR[i] == "10-20%") {
+  #   Corelation_DF$SR[i] = 1
+  # } else if (Corelation_DF$SR[i] == "20-30%") {
+  #   Corelation_DF$SR[i] = 1
+  # } else if (Corelation_DF$SR[i] == "30-50%") {
+  #   Corelation_DF$SR[i] = 2
+  # } else if (Corelation_DF$SR[i] == "50-75%") {
+  #   Corelation_DF$SR[i] = 3
+  # } else if (Corelation_DF$SR[i] == "75-90%") {
+  #   Corelation_DF$SR[i] = 3
+  # } else if (Corelation_DF$SR[i] == "") {
+  #   Corelation_DF$SR[i] = NA
+  # } else {
+  #   Corelation_DF$SR[i] = 3
+  # }
+  
+  
+  
   if (Corelation_DF$AP[i] == "1-2 weeks") {
     Corelation_DF$AP[i] = 1
   } else if (Corelation_DF$AP[i] == "2-4 weeks") {
@@ -553,6 +575,7 @@ corrplot(
   p.mat = res2$p,
   method = "color",
   type = "upper",
+  # title = "Psychometrics-core questions correlation on conference papers",
   title = "Psychometrics-core questions correlation on conference papers",
   sig.level = c(.001, .01, .05),
   pch.cex = .9,
